samples/_failures_safe/1761292798_66c132_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2af8bc7b.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_2af8bc7b.c:155:44: error: expected ‘)’ at end of input
  155 |         printf("Token %zu: %s -> '%s'\n", i
      |               ~                            ^
      |                                            )
./samples/SAFE/__tmp_2af8bc7b.c:155:9: error: expected declaration or statement at end of input
  155 |         printf("Token %zu: %s -> '%s'\n", i
      |         ^~~~~~
./samples/SAFE/__tmp_2af8bc7b.c:155:9: error: expected declaration or statement at end of input
